# Inure

./: .gitattributes  .gitignore  .imgbotconfig  CODE_OF_CONDUCT.md  FEATURES.md  PRIVACY.md  README.md  SECURITY.md  TOC.md  build.gradle  changelogs  changelogs.md  crowdin.yml  gradle.properties  gradlew  requirements.txt  settings.gradle
.fleet/: settings.json
.github/: CONTRIBUTING.md  FUNDING.yml
.github/ISSUE_TEMPLATE/: bug_report.md  bug_report.yml  config.yml  error_report.yml  feature_request.yml
.github/workflows/: build.apk.yml  build_apk.yml  build_beta_apk.yml  build_early_release_apk.yml  build_pre_apk.yml  build_release_apk.yml  build_temp_release.yml  build_test_release.yml  ci.yml  clean_old_workflows.yml  copy_community_permission.yml  copy_uad_file.yml  create_test_apk.yml  crowdin_auto_merge.yml  crowdin_merge.yml  data_sync.yml  dependency_analysis.yml  exodus_data.yml  exodus_etip_json_data.yml  exodus_json_data.yml  fastlane_val.yml  fdroid_repo.yml  hiatus_notice.yml  post_releases_to_telegram.yml  tg_test.yml  trackers_update.yml
app/: build.gradle  lint-baseline.xml  proguard-rules.pro
app/src/main/jni/: Android.bp  CMakeLists.txt  JVM.cpp  common.cpp  common.h  fileCompat.cpp  fileCompat.h  process.cpp  process.h  root_proc.cpp  termExec.cpp  termExec.h
app/src/main/jni/android_runtime/: AndroidRuntime.h  android_app_NativeActivity.h  android_content_res_Configuration.h  android_graphics_SurfaceTexture.h  android_hardware_HardwareBuffer.h  android_hardware_camera2_CameraMetadata.h  android_util_AssetManager.h  android_view_InputQueue.h  android_view_Surface.h  android_view_SurfaceSession.h
app/src/main/jni/frameworks/native/libs/binder/include/binder/: ActivityManager.h  AppOpsManager.h  Binder.h  BinderService.h  BpBinder.h  BufferedTextOutput.h  Debug.h  IActivityManager.h  IAppOpsCallback.h  IAppOpsService.h  IBatteryStats.h  IBinder.h  IInterface.h  IMediaResourceMonitor.h  IMemory.h  IPCThreadState.h  IPermissionController.h  IProcessInfoService.h  IResultReceiver.h  IServiceManager.h  IShellCallback.h  IUidObserver.h  IpPrefix.h  Map.h  MemoryBase.h  MemoryDealer.h  MemoryHeapBase.h  Parcel.h  Parcelable.h  PermissionCache.h  PermissionController.h  PersistableBundle.h  ProcessInfoService.h  ProcessState.h  SafeInterface.h  Status.h  TextOutput.h  Value.h
app/src/main/jni/libnativehelper/: Android.bp  AsynchronousCloseMonitor.cpp  JNIHelp-priv.h  JNIHelp.cpp  JniConstants.cpp  JniInvocation.cpp  toStringArray.cpp
app/src/main/jni/libnativehelper/header_only_include/nativehelper/: nativehelper_utils.h  scoped_bytes.h  scoped_local_frame.h  scoped_local_ref.h  scoped_primitive_array.h  scoped_string_chars.h  scoped_utf_chars.h
app/src/main/jni/libnativehelper/include/nativehelper/: AsynchronousCloseMonitor.h  JNIHelp.h  JniConstants.h  JniInvocation.h  ScopedBytes.h  ScopedLocalFrame.h  ScopedLocalRef.h  ScopedPrimitiveArray.h  ScopedStringChars.h  ScopedUtfChars.h  UniquePtr.h  toStringArray.h
app/src/main/jni/libnativehelper/include_jni/: jni.h
app/src/main/jni/libnativehelper/platform_include/nativehelper/: JniConstants-priv.h  jni_macros.h
app/src/main/jni/libnativehelper/platform_include/nativehelper/detail/: signature_checker.h
app/src/main/jni/libnativehelper/tests/: Android.bp  AndroidTest.xml  JniInvocation_test.cpp  JniSafeRegisterNativeMethods_test.cpp
app/src/main/jni/system/core/liblog/include/log/: log.h  log_radio.h  log_read.h  log_system.h
app/src/main/jni/system/core/libsystem/include/system/: graphics-base-v1.0.h  graphics-base-v1.1.h  radio.h  thread_defs.h
app/src/main/jni/system/core/libutils/include/utils/: AndroidThreads.h  BitSet.h  ByteOrder.h  CallStack.h  Condition.h  Debug.h  Errors.h  FileMap.h  Flattenable.h  Functor.h  JenkinsHash.h  KeyedVector.h  LightRefBase.h  List.h  Log.h  Looper.h  LruCache.h  Mutex.h  NativeHandle.h  Printer.h  ProcessCallStack.h  PropertyMap.h  RWLock.h  RefBase.h  Singleton.h  SortedVector.h  StopWatch.h  String16.h  String8.h  StrongPointer.h  SystemClock.h  Thread.h  ThreadDefs.h  Timers.h  Tokenizer.h  TypeHelpers.h  Unicode.h  Vector.h  VectorImpl.h  misc.h  (+1 more)
assets/: release.html  release.txt
community/permissions/: community_permission_database.json  (+1 more)
dachshundtablayout/: build.gradle
distribution/: whatsnew-en-US
hidden-api/: build.gradle
sample/: build.gradle  proguard-rules.pro
scripts/: cleanup_workflows.py  html_cleaner.py  prune_branches.bat
scripts/trackers/: parser.py  (+6 more)
stub/: build.gradle
trackers/: output.txt  parser.ps1  parser.py  tr.json  trackers.json  trackers.xml
virustotal/: build.gradle
xml_files/: izzyondroid_index.xml
(+3061 files in other folders)
